--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 #Conexão com o MySQL local
-spring.datasource.url=jdbc:mysql://localhost:3306/checklist??createDatabaseIfNotExist=true"&serverTimezone=America/Sao_Paulo
+spring.datasource.url=jdbc:mysql://localhost:3306/checklist?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
