--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-#Conexão com o MySQL local
+#Conexï¿½o com o MySQL local
 spring.datasource.url=jdbc:mysql://localhost:3306/checklist?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=admin
@@ -7,4 +7,4 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
